[package]
name = "alphabet-encoding"
description = "A way of encoding text"
repository = "https://github.com/grantlemons/alphabet-encoding"
license = "AGPL-3.0-only"
version = "0.1.0"
edition = "2021"

[lib]
name = "alphabet_encoding"
path = "src/lib.rs"

[[bin]]
name = "alphabetencoding"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.26", features = ["derive"] }
